--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,5 +2,5 @@
 # Kevin M. Meziere <kmeziere@jpcatholic.com>
 # Copyright 2015, John Paul the Great Catholic University
 
-jingles_release: dev
-jingles_version_required: fifo-jingles-0.6.1pre20150112T123032Z
+jingles_release: rel
+jingles_version_required: fifo-jingles-0.6.1.tgz
