--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,4 +3,4 @@
 # Copyright 2015, John Paul the Great Catholic University
 
 jingles_release: rel
-jingles_version_required: fifo-jingles-0.6.1.tgz
+jingles_version_required: fifo-jingles-0.6.1
