--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,5 +3,5 @@
 # Copyright 2015, John Paul the Great Catholic University
 
 cerberus_release: rel
-cerberus_version_required: fifo-cerberus-0.7.0p6
+cerberus_version_required: fifo-cerberus-0.7.1
 fifo_gpg_keyid: BB975564
